--- a/mod/uti/wiemanabenteurer.uti.yml
+++ b/mod/uti/wiemanabenteurer.uti.yml
@@ -1,34 +1,63 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 74}
-Charges: {type: :byte, value: 0}
-Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 0}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
-  value: 
-    0: "Das geradezu absurd dicke und schwere Buch, das eher eine Sammlung von einzelnen Abhandlungen \xC3\xBCber die verschiedensten Themen darstellt, behauptet von sich, ein umfassendes Handbuch \xC3\xBCber \"die pr\xC3\xA4chtige Kunst des erfolgreichen Abenteurerlebens zu sein\". Man findet darin unter anderem folgende Kapitel:\n\n - Gefolgsleute: Loyale Gef\xC3\xA4hrten oder stinkende Packesel?\n - Auf du und du mit Eurer Prestigeklasse\n - 101 Anwendungsm\xC3\xB6glichkeiten f\xC3\xBCr eine 3 m lange Stange\n - Katapulte: Ja, die Dinger schie\xC3\x9Fen wirklich so verdammt weit\n - Wie man den Gruppenschurken am besten ausnutzt\n - Die Zunderbox von heute: Und Ihr habt gedacht, man k\xC3\xB6nnte damit nur Fackeln entz\xC3\xBCnden ...\n - Interessante Gew\xC3\xB6lbe\n  - Die Hallen des Zwergenk\xC3\xB6nigs Stinkender Peter und sein lausig bewachtes Gold\n  - Die H\xC3\xB6hlen der tief und fest schlafenden Monster\n  - Der Turm von Erzmagier \"Durchfall\" Wozley, der auf der Nudelsuppe dahergeschwommen kam\n  - Das Lagerhaus der magischen Gegenst\xC3\xA4nde\n  - Die h\xC3\xB6lzerne Zitadelle von Darmos, dem alten und verkr\xC3\xBCppelten Kriegsherrn\n  - Onkel Daniels K\xC3\xBCche\n  ... und viele mehr!\n - Gew\xC3\xB6lbe, die man wie die Kr\xC3\xA4tze meiden sollte:\n  - Die Eiserne Festung von Blooday dem Seelenverschlinger\n  - Dominara, das neunst\xC3\xB6ckige Freudenhaus der Erinnyen.\n  - Das Gew\xC3\xB6lbe der Grausigen Ausweidung (keine Gnade und kein Gewinsel gestattet ...)\n  - Die blutrote H\xC3\xB6llengrube des milliardenfachen elenden Todes\n  - Das Arbeitszimmer von Onkel Uwe\n  ... und viele mehr!\n - Ihr und Eure Laterne\n - Zw\xC3\xB6lf Anwendungsm\xC3\xB6glichkeiten f\xC3\xBCr zw\xC3\xB6lf Eisenhaken\n - 99 Anwendungsm\xC3\xB6glichkeiten f\xC3\xBCr den kleinen Eisenhammer, den Ihr zusammen mit den kleinen Eisenhaken gekauft habt.\n - He, es gibt keinen Grund es zu leugnen! Ihn Wahrheit seid Ihr alle neutral b\xC3\xB6se!\n - Die bezaubernde Tochter des K\xC3\xB6nigs: Anschauen ja! Grabschen nein!\n - Steckt Eure Hand blo\xC3\x9F nicht in das dunkle Loch da.\n\n\
-      ... und \xC3\xBCber achtzig weitere informationsreiche Kapitel, in denen alle Aspekte des Abenteurerlebens, vom Horten von Sch\xC3\xA4tzen \xC3\xBCber das Wirken von Zaubern und tapfere, heroische Feigheit, um den eigenen Arsch zu retten, abgehandelt werden."
-Description: 
-  type: :cexolocstr
-  value: 
-    4: ""
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
-  value: 
-    0: Wie man Abenteurer wird
-ModelPart1: {type: :byte, value: 6}
-PaletteID: {type: :byte, value: 60}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
-  value: []
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 74}
+Charges: {type: byte, value: 0}
+Comment: {type: cexostr, value: ''}
+Cost: {type: dword, value: 0}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
+  value:
+    0: |-
+      Das geradezu absurd dicke und schwere Buch, das eher eine Sammlung von einzelnen Abhandlungen über die verschiedensten Themen darstellt, behauptet von sich, ein umfassendes Handbuch über "die prächtige Kunst des erfolgreichen Abenteurerlebens zu sein". Man findet darin unter anderem folgende Kapitel:
 
-StackSize: {type: :word, value: 1}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: WiemanAbenteurerwird}
-TemplateResRef: {type: :resref, value: wiemanabenteurer}
+       - Gefolgsleute: Loyale Gefährten oder stinkende Packesel?
+       - Auf du und du mit Eurer Prestigeklasse
+       - 101 Anwendungsmöglichkeiten für eine 3 m lange Stange
+       - Katapulte: Ja, die Dinger schießen wirklich so verdammt weit
+       - Wie man den Gruppenschurken am besten ausnutzt
+       - Die Zunderbox von heute: Und Ihr habt gedacht, man könnte damit nur Fackeln entzünden ...
+       - Interessante Gewölbe
+        - Die Hallen des Zwergenkönigs Stinkender Peter und sein lausig bewachtes Gold
+        - Die Höhlen der tief und fest schlafenden Monster
+        - Der Turm von Erzmagier "Durchfall" Wozley, der auf der Nudelsuppe dahergeschwommen kam
+        - Das Lagerhaus der magischen Gegenstände
+        - Die hölzerne Zitadelle von Darmos, dem alten und verkrüppelten Kriegsherrn
+        - Onkel Daniels Küche
+        ... und viele mehr!
+       - Gewölbe, die man wie die Krätze meiden sollte:
+        - Die Eiserne Festung von Blooday dem Seelenverschlinger
+        - Dominara, das neunstöckige Freudenhaus der Erinnyen.
+        - Das Gewölbe der Grausigen Ausweidung (keine Gnade und kein Gewinsel gestattet ...)
+        - Die blutrote Höllengrube des milliardenfachen elenden Todes
+        - Das Arbeitszimmer von Onkel Uwe
+        ... und viele mehr!
+       - Ihr und Eure Laterne
+       - Zwölf Anwendungsmöglichkeiten für zwölf Eisenhaken
+       - 99 Anwendungsmöglichkeiten für den kleinen Eisenhammer, den Ihr zusammen mit den kleinen Eisenhaken gekauft habt.
+       - He, es gibt keinen Grund es zu leugnen! Ihn Wahrheit seid Ihr alle neutral böse!
+       - Die bezaubernde Tochter des Königs: Anschauen ja! Grabschen nein!
+       - Steckt Eure Hand bloß nicht in das dunkle Loch da.
+
+      ... und über achtzig weitere informationsreiche Kapitel, in denen alle Aspekte des Abenteurerlebens, vom Horten von Schätzen über das Wirken von Zaubern und tapfere, heroische Feigheit, um den eigenen Arsch zu retten, abgehandelt werden.
+Description:
+  type: cexolocstr
+  value:
+    4: ''
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
+  value:
+    0: Wie man Abenteurer wird
+ModelPart1: {type: byte, value: 6}
+PaletteID: {type: byte, value: 60}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
+  value: []
+StackSize: {type: word, value: 1}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: WiemanAbenteurerwird}
+TemplateResRef: {type: resref, value: wiemanabenteurer}
