--- a/mod/uti/zwerg_keystone.uti.yml
+++ b/mod/uti/zwerg_keystone.uti.yml
@@ -1,50 +1,52 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 24}
-Charges: {type: :byte, value: 0}
-Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 13}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
-  value: 
-    0: "Ein gew\xC3\xB6hnlicher Stein, er scheint jedoch eine geringe magische Ladung zu haben die in der Lage ist eine Person mit einem Mal zu markieren, so ein Mal kann zu unterschiedlichsten Zwecken benutzt werden."
-Description: 
-  type: :cexolocstr
-  value: 
-    4: ""
-Identified: {type: :byte, value: 0}
-LocalizedName: 
-  type: :cexolocstr
-  value: 
-    0: "Bergkristall des Bingenw\xC3\xA4chters"
-ModelPart1: {type: :byte, value: 56}
-PaletteID: {type: :byte, value: 53}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 24}
+Charges: {type: byte, value: 0}
+Comment: {type: cexostr, value: ''}
+Cost: {type: dword, value: 13}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
+  value:
+    0: Ein gewöhnlicher Stein, er scheint jedoch eine geringe magische Ladung zu haben
+      die in der Lage ist eine Person mit einem Mal zu markieren, so ein Mal kann
+      zu unterschiedlichsten Zwecken benutzt werden.
+Description:
+  type: cexolocstr
+  value:
+    4: ''
+Identified: {type: byte, value: 0}
+LocalizedName:
+  type: cexolocstr
+  value:
+    0: Bergkristall des Bingenwächters
+ModelPart1: {type: byte, value: 56}
+PaletteID: {type: byte, value: 53}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
+  value:
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 10}
-    CostValue: {type: :word, value: 1}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 11}
-    Subtype: {type: :word, value: 0}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 10}
+    CostValue: {type: word, value: 1}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 0}
+    PropertyName: {type: word, value: 11}
+    Subtype: {type: word, value: 0}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 3}
-    CostValue: {type: :word, value: 13}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 15}
-    Subtype: {type: :word, value: 329}
-StackSize: {type: :word, value: 1}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: zwerg_keystone}
-TemplateResRef: {type: :resref, value: zwerg_keystone}
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 3}
+    CostValue: {type: word, value: 13}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 0}
+    PropertyName: {type: word, value: 15}
+    Subtype: {type: word, value: 329}
+StackSize: {type: word, value: 1}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: zwerg_keystone}
+TemplateResRef: {type: resref, value: zwerg_keystone}
