--- a/mod/uti/wakizashi.uti.yml
+++ b/mod/uti/wakizashi.uti.yml
@@ -1,35 +1,36 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 0}
-Charges: {type: :byte, value: 0}
-Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 1000}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
-  value: 
-    0: "Das 'Begleitschwert', wie die \xC3\x9Cbersetzung aus der Sprache Kara-Turs lautet, wird von einem der dort ans\xC3\xA4ssigen K\xC3\xA4mpfer f\xC3\xBCr gew\xC3\xB6hnlich in der Zweithand, im Zusammenspiel mit einem Katana gef\xC3\xBChrt."
-Description: 
-  type: :cexolocstr
-  value: 
-    0: ""
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
-  value: 
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 0}
+Charges: {type: byte, value: 0}
+Comment: {type: cexostr, value: ''}
+Cost: {type: dword, value: 1000}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
+  value:
+    0: Das 'Begleitschwert', wie die Übersetzung aus der Sprache Kara-Turs lautet,
+      wird von einem der dort ansässigen Kämpfer für gewöhnlich in der Zweithand,
+      im Zusammenspiel mit einem Katana geführt.
+Description:
+  type: cexolocstr
+  value:
+    0: ''
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
+  value:
     0: Wakizashi
-ModelPart1: {type: :byte, value: 11}
-ModelPart2: {type: :byte, value: 12}
-ModelPart3: {type: :byte, value: 72}
-PaletteID: {type: :byte, value: 38}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
+ModelPart1: {type: byte, value: 11}
+ModelPart2: {type: byte, value: 12}
+ModelPart3: {type: byte, value: 72}
+PaletteID: {type: byte, value: 38}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
   value: []
-
-StackSize: {type: :word, value: 1}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: Wakizashi}
-TemplateResRef: {type: :resref, value: wakizashi}
+StackSize: {type: word, value: 1}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: Wakizashi}
+TemplateResRef: {type: resref, value: wakizashi}
