--- a/mod/uti/wakizashi001.uti.yml
+++ b/mod/uti/wakizashi001.uti.yml
@@ -1,35 +1,34 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 0}
-Charges: {type: :byte, value: 0}
-Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 1000}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
-  value: 
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 0}
+Charges: {type: byte, value: 0}
+Comment: {type: cexostr, value: ''}
+Cost: {type: dword, value: 1000}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
+  value:
     0: Die kurze Variante des Katanas.
-Description: 
-  type: :cexolocstr
-  value: 
+Description:
+  type: cexolocstr
+  value:
     0: Die kurze Variante des Katanas.
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
-  value: 
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
+  value:
     0: Wakizashi
-ModelPart1: {type: :byte, value: 71}
-ModelPart2: {type: :byte, value: 171}
-ModelPart3: {type: :byte, value: 71}
-PaletteID: {type: :byte, value: 47}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
+ModelPart1: {type: byte, value: 71}
+ModelPart2: {type: byte, value: 171}
+ModelPart3: {type: byte, value: 71}
+PaletteID: {type: byte, value: 47}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
   value: []
-
-StackSize: {type: :word, value: 1}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: Wakizashi}
-TemplateResRef: {type: :resref, value: wakizashi001}
+StackSize: {type: word, value: 1}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: Wakizashi}
+TemplateResRef: {type: resref, value: wakizashi001}
