--- a/mod/uti/wand_bhands_5.uti.yml
+++ b/mod/uti/wand_bhands_5.uti.yml
@@ -1,63 +1,66 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 3250}
-BaseItem: {type: :int, value: 46}
-Charges: {type: :byte, value: 50}
-Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 8000}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
+AddCost: {type: dword, value: 3250}
+BaseItem: {type: int, value: 46}
+Charges: {type: byte, value: 50}
+Comment: {type: cexostr, value: ''}
+Cost: {type: dword, value: 8000}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
   str_ref: 14189
-  value: 
-    0: "Der Stab des Feuers bedient sich einer Disziplin der Magie, die seit Jahrunderten studiert und verehrt wird. Ihre Anwender sind derart verschieden, dass die urspr\xC3\xBCngliche Herkunft dieses Stabes nicht mehr festzustellen ist. Die j\xC3\xBCngsten und modernsten Variationen dieser Gegenst\xC3\xA4nde stammen in jedem Fall aus Tay, wo die Verehrung des Feuerf\xC3\xBCrsten Kossuth weit verbreitet ist."
-Description: 
-  type: :cexolocstr
+  value:
+    0: Der Stab des Feuers bedient sich einer Disziplin der Magie, die seit Jahrunderten
+      studiert und verehrt wird. Ihre Anwender sind derart verschieden, dass die ursprüngliche
+      Herkunft dieses Stabes nicht mehr festzustellen ist. Die jüngsten und modernsten
+      Variationen dieser Gegenstände stammen in jedem Fall aus Tay, wo die Verehrung
+      des Feuerfürsten Kossuth weit verbreitet ist.
+Description:
+  type: cexolocstr
   value: {}
-
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
   str_ref: 14190
-  value: 
-    0: "Stab: Brennende H\xC3\xA4nde (5)"
-ModelPart1: {type: :byte, value: 11}
-ModelPart2: {type: :byte, value: 11}
-ModelPart3: {type: :byte, value: 31}
-PaletteID: {type: :byte, value: 50}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
+  value:
+    0: 'Stab: Brennende Hände (5)'
+ModelPart1: {type: byte, value: 11}
+ModelPart2: {type: byte, value: 11}
+ModelPart3: {type: byte, value: 31}
+PaletteID: {type: byte, value: 50}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
+  value:
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 0}
-    CostValue: {type: :word, value: 0}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 63}
-    Subtype: {type: :word, value: 9}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 0}
+    CostValue: {type: word, value: 0}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 0}
+    PropertyName: {type: word, value: 63}
+    Subtype: {type: word, value: 9}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 0}
-    CostValue: {type: :word, value: 0}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 63}
-    Subtype: {type: :word, value: 10}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 0}
+    CostValue: {type: word, value: 0}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 0}
+    PropertyName: {type: word, value: 63}
+    Subtype: {type: word, value: 10}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 3}
-    CostValue: {type: :word, value: 6}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 15}
-    Subtype: {type: :word, value: 19}
-StackSize: {type: :word, value: 1}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: wand_bhands_5}
-TemplateResRef: {type: :resref, value: wand_bhands_5}
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 3}
+    CostValue: {type: word, value: 6}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 0}
+    PropertyName: {type: word, value: 15}
+    Subtype: {type: word, value: 19}
+StackSize: {type: word, value: 1}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: wand_bhands_5}
+TemplateResRef: {type: resref, value: wand_bhands_5}
