--- a/mod/uti/wand_lightnin_5.uti.yml
+++ b/mod/uti/wand_lightnin_5.uti.yml
@@ -1,63 +1,62 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 46}
-Charges: {type: :byte, value: 50}
-Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 12250}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 46}
+Charges: {type: byte, value: 50}
+Comment: {type: cexostr, value: ''}
+Cost: {type: dword, value: 12250}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
   str_ref: 14195
   value: {}
-
-Description: 
-  type: :cexolocstr
-  value: 
-    4: ""
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
+Description:
+  type: cexolocstr
+  value:
+    4: ''
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
   str_ref: 14196
-  value: 
-    0: "Stab: Blitzstrahl (5)"
-ModelPart1: {type: :byte, value: 31}
-ModelPart2: {type: :byte, value: 31}
-ModelPart3: {type: :byte, value: 21}
-PaletteID: {type: :byte, value: 50}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
+  value:
+    0: 'Stab: Blitzstrahl (5)'
+ModelPart1: {type: byte, value: 31}
+ModelPart2: {type: byte, value: 31}
+ModelPart3: {type: byte, value: 21}
+PaletteID: {type: byte, value: 50}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
+  value:
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 0}
-    CostValue: {type: :word, value: 0}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 63}
-    Subtype: {type: :word, value: 9}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 0}
+    CostValue: {type: word, value: 0}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 0}
+    PropertyName: {type: word, value: 63}
+    Subtype: {type: word, value: 9}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 0}
-    CostValue: {type: :word, value: 0}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 63}
-    Subtype: {type: :word, value: 10}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 0}
+    CostValue: {type: word, value: 0}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 0}
+    PropertyName: {type: word, value: 63}
+    Subtype: {type: word, value: 10}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 3}
-    CostValue: {type: :word, value: 6}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 255}
-    PropertyName: {type: :word, value: 15}
-    Subtype: {type: :word, value: 164}
-StackSize: {type: :word, value: 1}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: wand_lightnin_5}
-TemplateResRef: {type: :resref, value: wand_lightnin_5}
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 3}
+    CostValue: {type: word, value: 6}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 255}
+    PropertyName: {type: word, value: 15}
+    Subtype: {type: word, value: 164}
+StackSize: {type: word, value: 1}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: wand_lightnin_5}
+TemplateResRef: {type: resref, value: wand_lightnin_5}
