--- a/mod/uti/waxmbt006.uti.yml
+++ b/mod/uti/waxmbt006.uti.yml
@@ -1,37 +1,34 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 2}
-Charges: {type: :byte, value: 50}
-Comment: {type: :cexostr, value: "1"}
-Cost: {type: :dword, value: 1000}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 2}
+Charges: {type: byte, value: 50}
+Comment: {type: cexostr, value: '1'}
+Cost: {type: dword, value: 1000}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
   str_ref: 13904
   value: {}
-
-Description: 
-  type: :cexolocstr
+Description:
+  type: cexolocstr
   value: {}
-
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
   str_ref: 13905
-  value: 
+  value:
     0: Bergarbeiter-Axt
-ModelPart1: {type: :byte, value: 151}
-ModelPart2: {type: :byte, value: 111}
-ModelPart3: {type: :byte, value: 182}
-PaletteID: {type: :byte, value: 31}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
+ModelPart1: {type: byte, value: 151}
+ModelPart2: {type: byte, value: 111}
+ModelPart3: {type: byte, value: 182}
+PaletteID: {type: byte, value: 31}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
   value: []
-
-StackSize: {type: :word, value: 1}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: NW_WAXMBT005}
-TemplateResRef: {type: :resref, value: waxmbt006}
+StackSize: {type: word, value: 1}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: NW_WAXMBT005}
+TemplateResRef: {type: resref, value: waxmbt006}
