--- a/mod/uti/wblms002.uti.yml
+++ b/mod/uti/wblms002.uti.yml
@@ -1,36 +1,33 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 47}
-Charges: {type: :byte, value: 0}
-Comment: {type: :cexostr, value: "1"}
-Cost: {type: :dword, value: 800}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 47}
+Charges: {type: byte, value: 0}
+Comment: {type: cexostr, value: '1'}
+Cost: {type: dword, value: 800}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
   value: {}
-
-Description: 
-  type: :cexolocstr
+Description:
+  type: cexolocstr
   value: {}
-
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
   str_ref: 1541
-  value: 
+  value:
     0: Morgenstern
-ModelPart1: {type: :byte, value: 41}
-ModelPart2: {type: :byte, value: 31}
-ModelPart3: {type: :byte, value: 21}
-PaletteID: {type: :byte, value: 61}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
+ModelPart1: {type: byte, value: 41}
+ModelPart2: {type: byte, value: 31}
+ModelPart3: {type: byte, value: 21}
+PaletteID: {type: byte, value: 61}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
   value: []
-
-StackSize: {type: :word, value: 1}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: NW_WBLMS001}
-TemplateResRef: {type: :resref, value: wblms002}
+StackSize: {type: word, value: 1}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: NW_WBLMS001}
+TemplateResRef: {type: resref, value: wblms002}
