--- a/mod/uti/wmgst006.uti.yml
+++ b/mod/uti/wmgst006.uti.yml
@@ -1,90 +1,87 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 45}
-Charges: {type: :byte, value: 50}
-Comment: {type: :cexostr, value: "1"}
-Cost: {type: :dword, value: 13503}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 45}
+Charges: {type: byte, value: 50}
+Comment: {type: cexostr, value: '1'}
+Cost: {type: dword, value: 13503}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
   str_ref: 14181
   value: {}
-
-Description: 
-  type: :cexolocstr
+Description:
+  type: cexolocstr
   value: {}
-
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
   str_ref: 14182
   value: {}
-
-ModelPart1: {type: :byte, value: 71}
-ModelPart2: {type: :byte, value: 71}
-ModelPart3: {type: :byte, value: 71}
-PaletteID: {type: :byte, value: 49}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
+ModelPart1: {type: byte, value: 71}
+ModelPart2: {type: byte, value: 71}
+ModelPart3: {type: byte, value: 71}
+PaletteID: {type: byte, value: 49}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
+  value:
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 0}
-    CostValue: {type: :word, value: 0}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 255}
-    PropertyName: {type: :word, value: 63}
-    Subtype: {type: :word, value: 9}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 0}
+    CostValue: {type: word, value: 0}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 255}
+    PropertyName: {type: word, value: 63}
+    Subtype: {type: word, value: 9}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 0}
-    CostValue: {type: :word, value: 0}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 255}
-    PropertyName: {type: :word, value: 63}
-    Subtype: {type: :word, value: 10}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 0}
+    CostValue: {type: word, value: 0}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 255}
+    PropertyName: {type: word, value: 63}
+    Subtype: {type: word, value: 10}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 2}
-    CostValue: {type: :word, value: 2}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 6}
-    Subtype: {type: :word, value: 0}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 2}
+    CostValue: {type: word, value: 2}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 0}
+    PropertyName: {type: word, value: 6}
+    Subtype: {type: word, value: 0}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 3}
-    CostValue: {type: :word, value: 4}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 255}
-    PropertyName: {type: :word, value: 15}
-    Subtype: {type: :word, value: 108}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 3}
+    CostValue: {type: word, value: 4}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 255}
+    PropertyName: {type: word, value: 15}
+    Subtype: {type: word, value: 108}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 3}
-    CostValue: {type: :word, value: 5}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 255}
-    PropertyName: {type: :word, value: 15}
-    Subtype: {type: :word, value: 173}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 3}
+    CostValue: {type: word, value: 5}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 255}
+    PropertyName: {type: word, value: 15}
+    Subtype: {type: word, value: 173}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 3}
-    CostValue: {type: :word, value: 6}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 255}
-    PropertyName: {type: :word, value: 15}
-    Subtype: {type: :word, value: 227}
-StackSize: {type: :word, value: 1}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: NW_WMGST005}
-TemplateResRef: {type: :resref, value: wmgst006}
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 3}
+    CostValue: {type: word, value: 6}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 255}
+    PropertyName: {type: word, value: 15}
+    Subtype: {type: word, value: 227}
+StackSize: {type: word, value: 1}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: NW_WMGST005}
+TemplateResRef: {type: resref, value: wmgst006}
