--- a/mod/uti/wolfskopfdolch.uti.yml
+++ b/mod/uti/wolfskopfdolch.uti.yml
@@ -1,39 +1,38 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 22}
-Charges: {type: :byte, value: 0}
-Comment: {type: :cexostr, value: "bestellung einer elve bei kilgarus...\r\n\
-    \r\n\
-    EINZIGARTIG\r\n\
-    \r\n\
-    UNVERK\xC3\x84UFLICH"}
-Cost: {type: :dword, value: 200}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
-  value: 
-    0: "Die etwa 25 cm lange Klinge des Dolches besteht aus gl\xC3\xA4nzendem Gold. Ebenso das Mittelteil und das Ende des Dolches. Der Griff besteht aus drei kleinen Wolfskopf\xC3\xA4hnlichen St\xC3\xBCcken, welche wie zusammengewachsen wirken und nicht ohne weiteres zu trennen sind. Die Augen der K\xC3\xB6pfe bestehen aus milchigem Gestein."
-Description: 
-  type: :cexolocstr
-  value: 
-    0: Der Dolch ist eine einfache, aber vielseitige Waffe. Seine zweischneidige, spitze Klinge ist 25 cm lang.
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
-  value: 
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 22}
+Charges: {type: byte, value: 0}
+Comment: {type: cexostr, value: "bestellung einer elve bei kilgarus...\r\n\r\nEINZIGARTIG\r\n\r\nUNVERKÄUFLICH"}
+Cost: {type: dword, value: 200}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
+  value:
+    0: Die etwa 25 cm lange Klinge des Dolches besteht aus glänzendem Gold. Ebenso
+      das Mittelteil und das Ende des Dolches. Der Griff besteht aus drei kleinen
+      Wolfskopfähnlichen Stücken, welche wie zusammengewachsen wirken und nicht ohne
+      weiteres zu trennen sind. Die Augen der Köpfe bestehen aus milchigem Gestein.
+Description:
+  type: cexolocstr
+  value:
+    0: Der Dolch ist eine einfache, aber vielseitige Waffe. Seine zweischneidige,
+      spitze Klinge ist 25 cm lang.
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
+  value:
     0: Wolfskopfdolch
-ModelPart1: {type: :byte, value: 12}
-ModelPart2: {type: :byte, value: 22}
-ModelPart3: {type: :byte, value: 12}
-PaletteID: {type: :byte, value: 34}
-Plot: {type: :byte, value: 1}
-PropertiesList: 
-  type: :list
+ModelPart1: {type: byte, value: 12}
+ModelPart2: {type: byte, value: 22}
+ModelPart3: {type: byte, value: 12}
+PaletteID: {type: byte, value: 34}
+Plot: {type: byte, value: 1}
+PropertiesList:
+  type: list
   value: []
-
-StackSize: {type: :word, value: 1}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: Wolfskopfdolch}
-TemplateResRef: {type: :resref, value: wolfskopfdolch}
+StackSize: {type: word, value: 1}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: Wolfskopfdolch}
+TemplateResRef: {type: resref, value: wolfskopfdolch}
