--- a/mod/uti/woodaxe001.uti.yml
+++ b/mod/uti/woodaxe001.uti.yml
@@ -1,35 +1,35 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 38}
-Charges: {type: :byte, value: 0}
-Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 600}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
-  value: 
-    0: "Eine kleine Holzf\xC3\xA4lleraxt. Sie ist im Grunde nur f\xC3\xBCr B\xC3\xA4ume wirklich gef\xC3\xA4hrlich, und auch nur dann, wenn sie in den H\xC3\xA4nden kleiner Humanoide gef\xC3\xBChrt wird."
-Description: 
-  type: :cexolocstr
-  value: 
-    4: ""
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
-  value: 
-    0: "Werkzeug: Holzf\xC3\xA4lleraxt, Klein"
-ModelPart1: {type: :byte, value: 41}
-ModelPart2: {type: :byte, value: 41}
-ModelPart3: {type: :byte, value: 41}
-PaletteID: {type: :byte, value: 64}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 38}
+Charges: {type: byte, value: 0}
+Comment: {type: cexostr, value: ''}
+Cost: {type: dword, value: 600}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
+  value:
+    0: Eine kleine Holzfälleraxt. Sie ist im Grunde nur für Bäume wirklich gefährlich,
+      und auch nur dann, wenn sie in den Händen kleiner Humanoide geführt wird.
+Description:
+  type: cexolocstr
+  value:
+    4: ''
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
+  value:
+    0: 'Werkzeug: Holzfälleraxt, Klein'
+ModelPart1: {type: byte, value: 41}
+ModelPart2: {type: byte, value: 41}
+ModelPart3: {type: byte, value: 41}
+PaletteID: {type: byte, value: 64}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
   value: []
-
-StackSize: {type: :word, value: 1}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: WoodAxe}
-TemplateResRef: {type: :resref, value: woodaxe001}
+StackSize: {type: word, value: 1}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: WoodAxe}
+TemplateResRef: {type: resref, value: woodaxe001}
