--- a/mod/uti/wp_sorace.uti.yml
+++ b/mod/uti/wp_sorace.uti.yml
@@ -1,70 +1,69 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 22}
-Charges: {type: :byte, value: 0}
-Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 58520}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 22}
+Charges: {type: byte, value: 0}
+Comment: {type: cexostr, value: ''}
+Cost: {type: dword, value: 58520}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
   value: {}
-
-Description: 
-  type: :cexolocstr
-  value: 
-    4: ""
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
-  value: 
+Description:
+  type: cexolocstr
+  value:
+    4: ''
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
+  value:
     0: Tochter von Kaltherz
-ModelPart1: {type: :byte, value: 23}
-ModelPart2: {type: :byte, value: 53}
-ModelPart3: {type: :byte, value: 41}
-PaletteID: {type: :byte, value: 34}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
+ModelPart1: {type: byte, value: 23}
+ModelPart2: {type: byte, value: 53}
+ModelPart3: {type: byte, value: 41}
+PaletteID: {type: byte, value: 34}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
+  value:
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 24}
-    CostValue: {type: :word, value: 0}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 48}
-    Subtype: {type: :word, value: 17}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 24}
+    CostValue: {type: word, value: 0}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 0}
+    PropertyName: {type: word, value: 48}
+    Subtype: {type: word, value: 17}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 0}
-    CostValue: {type: :word, value: 0}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 65}
-    Subtype: {type: :word, value: 8}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 0}
+    CostValue: {type: word, value: 0}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 0}
+    PropertyName: {type: word, value: 65}
+    Subtype: {type: word, value: 8}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 0}
-    CostValue: {type: :word, value: 0}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 63}
-    Subtype: {type: :word, value: 2}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 0}
+    CostValue: {type: word, value: 0}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 0}
+    PropertyName: {type: word, value: 63}
+    Subtype: {type: word, value: 2}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 2}
-    CostValue: {type: :word, value: 2}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 6}
-    Subtype: {type: :word, value: 0}
-StackSize: {type: :word, value: 1}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: wp_sorace}
-TemplateResRef: {type: :resref, value: wp_sorace}
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 2}
+    CostValue: {type: word, value: 2}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 0}
+    PropertyName: {type: word, value: 6}
+    Subtype: {type: word, value: 0}
+StackSize: {type: word, value: 1}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: wp_sorace}
+TemplateResRef: {type: resref, value: wp_sorace}
