--- a/mod/uti/wthax002.uti.yml
+++ b/mod/uti/wthax002.uti.yml
@@ -1,36 +1,38 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 63}
-Charges: {type: :byte, value: 0}
-Comment: {type: :cexostr, value: "1"}
-Cost: {type: :dword, value: 400}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
-  value: 
-    0: "Oft als Zwergenbogen bel\xC3\xA4chelt hat das Wurfbeil hat nur noch wenig \xC3\x84hnlichkeit mit dem Holzbearbeitungswerkzeug, aus dem es einst entstanden ist. Es wurde sorgf\xC3\xA4ltig ausbalanciert, damit es gut fliegt, weil bei dieser Waffe Pr\xC3\xA4zision wichtiger ist als Robustheit."
-Description: 
-  type: :cexolocstr
-  value: 
-    0: ""
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 63}
+Charges: {type: byte, value: 0}
+Comment: {type: cexostr, value: '1'}
+Cost: {type: dword, value: 400}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
+  value:
+    0: Oft als Zwergenbogen belächelt hat das Wurfbeil hat nur noch wenig Ähnlichkeit
+      mit dem Holzbearbeitungswerkzeug, aus dem es einst entstanden ist. Es wurde
+      sorgfältig ausbalanciert, damit es gut fliegt, weil bei dieser Waffe Präzision
+      wichtiger ist als Robustheit.
+Description:
+  type: cexolocstr
+  value:
+    0: ''
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
   str_ref: 1557
-  value: 
+  value:
     0: Wurfbeil
-ModelPart1: {type: :byte, value: 21}
-ModelPart2: {type: :byte, value: 42}
-ModelPart3: {type: :byte, value: 22}
-PaletteID: {type: :byte, value: 52}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
+ModelPart1: {type: byte, value: 21}
+ModelPart2: {type: byte, value: 42}
+ModelPart3: {type: byte, value: 22}
+PaletteID: {type: byte, value: 52}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
   value: []
-
-StackSize: {type: :word, value: 50}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: NW_WTHAX001}
-TemplateResRef: {type: :resref, value: wthax002}
+StackSize: {type: word, value: 50}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: NW_WTHAX001}
+TemplateResRef: {type: resref, value: wthax002}
