--- a/mod/uti/wthsh002.uti.yml
+++ b/mod/uti/wthsh002.uti.yml
@@ -1,34 +1,36 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 59}
-Charges: {type: :byte, value: 0}
-Comment: {type: :cexostr, value: "1"}
-Cost: {type: :dword, value: 1000}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
-  value: 
-    0: "Eine andere seltsame Waffe die aus Kara-Tur stammt ist das Shuriken. F\xC3\xBCr gew\xC3\xB6hnlich ist es ein messerscharf gezackter Metallstern, der mit der Hand geworfen wird. Shuriken sind sehr leicht am K\xC3\xB6rper zu verstecken und sehr schnell hintereinander zu werfen."
-Description: 
-  type: :cexolocstr
-  value: 
-    0: ""
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 59}
+Charges: {type: byte, value: 0}
+Comment: {type: cexostr, value: '1'}
+Cost: {type: dword, value: 1000}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
+  value:
+    0: Eine andere seltsame Waffe die aus Kara-Tur stammt ist das Shuriken. Für gewöhnlich
+      ist es ein messerscharf gezackter Metallstern, der mit der Hand geworfen wird.
+      Shuriken sind sehr leicht am Körper zu verstecken und sehr schnell hintereinander
+      zu werfen.
+Description:
+  type: cexolocstr
+  value:
+    0: ''
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
   str_ref: 1553
-  value: 
+  value:
     0: Shuriken
-ModelPart1: {type: :byte, value: 41}
-PaletteID: {type: :byte, value: 52}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
+ModelPart1: {type: byte, value: 41}
+PaletteID: {type: byte, value: 52}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
   value: []
-
-StackSize: {type: :word, value: 50}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: NW_WTHSH001}
-TemplateResRef: {type: :resref, value: wthsh002}
+StackSize: {type: word, value: 50}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: NW_WTHSH001}
+TemplateResRef: {type: resref, value: wthsh002}
