--- a/mod/uti/wurfpfeil.uti.yml
+++ b/mod/uti/wurfpfeil.uti.yml
@@ -1,33 +1,34 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 31}
-Charges: {type: :byte, value: 0}
-Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 55}
-Cursed: {type: :byte, value: 0}
-DescIdentified: 
-  type: :cexolocstr
-  value: 
-    0: "Ein Wurfpfeil hat die Gr\xC3\xB6\xC3\x9Fe eines kleinen Dolches und wird per Hand auf das Ziel geworfen. F\xC3\xBCr gew\xC3\xB6hnlich wird die mangelnde Durchschlagskraft durch die Anwendung von Giften wettgemacht."
-Description: 
-  type: :cexolocstr
-  value: 
-    0: ""
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
-  value: 
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 31}
+Charges: {type: byte, value: 0}
+Comment: {type: cexostr, value: ''}
+Cost: {type: dword, value: 55}
+Cursed: {type: byte, value: 0}
+DescIdentified:
+  type: cexolocstr
+  value:
+    0: Ein Wurfpfeil hat die Größe eines kleinen Dolches und wird per Hand auf das
+      Ziel geworfen. Für gewöhnlich wird die mangelnde Durchschlagskraft durch die
+      Anwendung von Giften wettgemacht.
+Description:
+  type: cexolocstr
+  value:
+    0: ''
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
+  value:
     0: Wurfpfeil
-ModelPart1: {type: :byte, value: 31}
-PaletteID: {type: :byte, value: 52}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
+ModelPart1: {type: byte, value: 31}
+PaletteID: {type: byte, value: 52}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
   value: []
-
-StackSize: {type: :word, value: 50}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: Wurfpfeil}
-TemplateResRef: {type: :resref, value: wurfpfeil}
+StackSize: {type: word, value: 50}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: Wurfpfeil}
+TemplateResRef: {type: resref, value: wurfpfeil}
