--- a/mod/uti/xarasdorn.uti.yml
+++ b/mod/uti/xarasdorn.uti.yml
@@ -1,52 +1,50 @@
---- !nwn-lib.elv.es,2008-12/struct 
+--- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTI
 __struct_id: 4294967295
-AddCost: {type: :dword, value: 0}
-BaseItem: {type: :int, value: 22}
-Charges: {type: :byte, value: 0}
-Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 30620}
-Cursed: {type: :byte, value: 1}
-DescIdentified: 
-  type: :cexolocstr
+AddCost: {type: dword, value: 0}
+BaseItem: {type: int, value: 22}
+Charges: {type: byte, value: 0}
+Comment: {type: cexostr, value: ''}
+Cost: {type: dword, value: 30620}
+Cursed: {type: byte, value: 1}
+DescIdentified:
+  type: cexolocstr
   value: {}
-
-Description: 
-  type: :cexolocstr
+Description:
+  type: cexolocstr
   value: {}
-
-Identified: {type: :byte, value: 1}
-LocalizedName: 
-  type: :cexolocstr
-  value: 
+Identified: {type: byte, value: 1}
+LocalizedName:
+  type: cexolocstr
+  value:
     0: Xarasdorn
-ModelPart1: {type: :byte, value: 34}
-ModelPart2: {type: :byte, value: 51}
-ModelPart3: {type: :byte, value: 44}
-PaletteID: {type: :byte, value: 34}
-Plot: {type: :byte, value: 0}
-PropertiesList: 
-  type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
+ModelPart1: {type: byte, value: 34}
+ModelPart2: {type: byte, value: 51}
+ModelPart3: {type: byte, value: 44}
+PaletteID: {type: byte, value: 34}
+Plot: {type: byte, value: 0}
+PropertiesList:
+  type: list
+  value:
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 24}
-    CostValue: {type: :word, value: 1}
-    Param1: {type: :byte, value: 10}
-    Param1Value: {type: :byte, value: 2}
-    PropertyName: {type: :word, value: 48}
-    Subtype: {type: :word, value: 19}
-  - !nwn-lib.elv.es,2008-12/struct 
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 24}
+    CostValue: {type: word, value: 1}
+    Param1: {type: byte, value: 10}
+    Param1Value: {type: byte, value: 2}
+    PropertyName: {type: word, value: 48}
+    Subtype: {type: word, value: 19}
+  - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 2}
-    CostValue: {type: :word, value: 1}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 6}
-    Subtype: {type: :word, value: 0}
-StackSize: {type: :word, value: 1}
-Stolen: {type: :byte, value: 0}
-Tag: {type: :cexostr, value: Xarasdorn}
-TemplateResRef: {type: :resref, value: xarasdorn}
+    ChanceAppear: {type: byte, value: 100}
+    CostTable: {type: byte, value: 2}
+    CostValue: {type: word, value: 1}
+    Param1: {type: byte, value: 255}
+    Param1Value: {type: byte, value: 0}
+    PropertyName: {type: word, value: 6}
+    Subtype: {type: word, value: 0}
+StackSize: {type: word, value: 1}
+Stolen: {type: byte, value: 0}
+Tag: {type: cexostr, value: Xarasdorn}
+TemplateResRef: {type: resref, value: xarasdorn}
