module.ifo: don't cache any scripts

--- a/mod/mod/module.ifo.yml
+++ b/mod/mod/module.ifo.yml
@@ -573,27 +573,7 @@ Mod_Area_list:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 6, Area_Name: {type: resref, value: zentarim4}}
 Mod_CacheNSSList:
   type: list
-  value:
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: _area_enter}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: _area_hb}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: _area_leave}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: _area_udef}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: area_left}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: dmfi_execute}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: dmfi_voice_exe}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: hb_door}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: hb_hunger}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: hb_running}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: heartbeat}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: hhb_subrace}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: msg_chat}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: msg_serv}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: onacquireitem}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: onactivateitem}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: onequipitem}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: onmodulehb}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: onunacquireitem}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 9, ResRef: {type: resref, value: onunequipitem}}
+  value: []
 Mod_Creator_ID: {type: int, value: 2}
 Mod_CustomTlk: {type: cexostr, value: silm}
 Mod_CutSceneList:
