clean up build system a bit

--- a/mod/nss/Makefile
+++ b/mod/nss/Makefile
@@ -1,17 +1,15 @@
-all: compile
+NO_COLOR=\x1b[0m
+OK_COLOR=\x1b[32;01m
+ERROR_COLOR=\x1b[31;01m
+WARN_COLOR=\x1b[33;01m
+
+all: Makefile.dep compile
 
 clean:
-	-rm *.nss *.ncs *.ndb Makefile.dep
+	-rm *.nss *.ncs *.ndb Makefile.dep $(autogen)
 
 NCC=../../build/nwnnsscomp
 NCCFLAGS=-g -c -q -o
-NSSVERIFYFLAGS=-g -o -q -t4
-
-# Various git/shell-related variables.
-commit := $(shell git rev-parse --short --verify HEAD)
-fullcommit := $(shell git log --decorate -n 1|head -1|cut -d' ' -f2-)
-commitdate := $(shell git log --decorate -n 1|grep Date|cut -f4- -d' ')
-builddate := $(shell date "+%Y-%m-%d %X %z (%a, %d %b %Y)")
 
 corefiles := $(wildcard ../../gamedata/override/*.nss)
 
@@ -45,20 +43,16 @@ Makefile.dep: $(autogen) $(headers) $(scripts)
 	@echo "Building dependencies: Makefile.dep .."
 	@./build_dep_list.rb -g stddef.h -g _const.nh $(headers) $(scripts) > Makefile.dep
 
-.PHONY: revupdate
-revupdate:
-	@echo '#define GIT_COMMIT_ON "$(commitdate)"' > git.h
-	@echo '#define GIT_BUILD_ON "$(builddate)"'  >> git.h
-	@echo '#define GIT_COMMIT "$(commit)"'       >> git.h
-
 %.nss:
 	@set -e; (gcc -undef -Wall -P -E -nostdinc -include stddef.h -I . -include _const.nh -x c -std=c99 $< |\
-		gpp +z -C +n --nostdinc -Iglobal -I. --include "gpp.h" > `basename $< .n`.nss)
+		gpp +z -C +n --nostdinc -Iglobal -I. --include "gpp.h" > `basename $< .n`.nss) && \
+		echo " $(OK_COLOR)[OK]$(NO_COLOR) gpp $<"
 
 %.ncs:
-	$(NCC) $(NCCFLAGS) ../../gamedata $<
+	@$(NCC) $(NCCFLAGS) ../../gamedata $< && \
+		echo " $(OK_COLOR)[OK]$(NO_COLOR) ncc $<"
 
-compile: Makefile.dep $(preprocessed) $(objects)
+compile: $(preprocessed) $(objects)
 
 .tags: $(headers) $(scripts) $(corefiles)
 	@ctags --language-force=c --totals --c-kinds=cdefgmnpstuvx --fields=fksmnSzt $(corefiles) $(scripts) $(headers) .tags
