--- a/mod/nss/Makefile
+++ b/mod/nss/Makefile
@@ -6,16 +6,16 @@ WARN_COLOR=\x1b[33;01m
 all: Makefile.dep compile
 
 clean:
-	-rm *.nss *.ncs *.ndb Makefile.dep $(autogen)
+	-rm out/*.nss out/*.ncs out/*.ndb Makefile.dep $(autogen)
 
-NCC=../../build/nwnnsscomp
+NCC=../../../build/nwnnsscomp
 NCCFLAGS=-g -c -q -o
 
 corefiles := $(wildcard ../../gamedata/override/*.nss)
 
 headers := $(wildcard *.h *.nh)
 scripts := $(wildcard *.n)
-preprocessed := $(addsuffix .nss, $(basename $(scripts)))
+preprocessed := $(addprefix out/, $(addsuffix .nss, $(basename $(scripts))))
 
 # $(corefiles) all .nss files that are provided by NWN itself
 
@@ -26,13 +26,13 @@ preprocessed := $(addsuffix .nss, $(basename $(scripts)))
 include Makefile.dep
 
 # From Makefile.dep:
-# $(objects)   array of script basenames (without extension) that are compileable
+# $(objects)   array of script files that are compileable (not includes)
 
-autogen := appearance.h draconic.n
+autogen := appearance.h out/draconic.nss
 
-draconic.n: gen_language_file ../../hak/client_2da/spells.2ds
+out/draconic.nss: gen_language_file ../../hak/client_2da/spells.2ds
 	make -C ../../hak/client_2da/ spells.2ds
-	./gen_language_file > draconic.n
+	./gen_language_file > out/draconic.nss
 
 draconic.nss: draconic.n
 
@@ -43,13 +43,13 @@ Makefile.dep: $(autogen) $(headers) $(scripts)
 	@echo "Building dependencies: Makefile.dep .."
 	@./build_dep_list.rb -g stddef.h -g _const.nh $(headers) $(scripts) > Makefile.dep
 
-%.nss:
+out/%.nss:
 	@set -e; (gcc -undef -Wall -P -E -nostdinc -include stddef.h -I . -include _const.nh -x c -std=c99 $< |\
-		gpp +z -C +n --nostdinc -Iglobal -I. --include "gpp.h" > `basename $< .n`.nss) && \
-		echo " $(OK_COLOR)[OK]$(NO_COLOR) gpp $<"
+		gpp +z -C +n --nostdinc -Iglobal -I. --include "gpp.h" > out/`basename $< .n`.nss) && \
+		echo " $(OK_COLOR)[OK]$(NO_COLOR) gpp $<" || rm out/`basename $< .n`.nss
 
-%.ncs:
-	@$(NCC) $(NCCFLAGS) ../../gamedata $< && \
+out/%.ncs:
+	@cd out/ && $(NCC) $(NCCFLAGS) ../../../gamedata $< && \
 		echo " $(OK_COLOR)[OK]$(NO_COLOR) ncc $<"
 
 compile: $(preprocessed) $(objects)
