module.ifo.yml: add wsf10 senadds & sep tilesets

--- a/mod/mod/module.ifo.yml
+++ b/mod/mod/module.ifo.yml
@@ -57,6 +57,8 @@ Mod_HakList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: ctp_common}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: wrm_fantasyintf}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: wrm_fantasyint}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: wrm_sf10_sep}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: wrm_sf10_senadds}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: wrm_seasonalv10}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: ctp_genericdoors}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: ctp_dwarf_hall}}
